# FDAproject

./: .gitignore  LICENSE  README.md  ma.ipynb  pyproject.toml  requirements.txt
bayesian_opt_results/: optimization_report_20260323_201449.txt
data/: cleaned_rv_annualized.csv  cleaned_rv_daily.csv
model/: bayesian_optimization.py  benchmark.py  cnn_har_ks_model.pth  cnn_har_ks_multitask_model.pth  cnn_har_ks_multitask_model_best_params.pth  dataloader.py  garch&ewma.ipynb  har-rv.ipynb  har_cnn.ipynb  har_cnn.py  model.py  preprocess.py  test.ipynb  train_har_cnn_with_best_params.py  visualize_results.py
model/bayesian_opt_results/: best_params_20260321_190834.json  best_params_20260323_201449.json  optimization_report_20260321_190834.txt
papers/: proposal.md
webapp/: APP_README.md  EDA.html  app.py  generate_html.py  interim_report.html  run_app.sh
